# CaumeDSE

./: AGENTS.md  AI_USAGE.md  API_EXAMPLES.md  AUTHORS  CHANGELOG.md  COPYING  CaumeDSE  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README-alpha  README.md  TODO.md  TUTORIAL.md  aclocal.m4  common.h  config.c  config.guess  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure~  crypto.c  crypto.h  db.c  db.h  debug_tests.c  engine_admin.c  engine_admin.h  engine_interface.c  engine_interface.h  filehandling.c  filehandling.h  (+16 more)
.deps/: config.Po  crypto.Po  db.Po  engine_admin.Po  engine_interface.Po  filehandling.Po  function_tests.Po  main.Po  perl_interpreter.Po  strhandling.Po  webservice_interface.Po  xs_init.Po
TEST/: run_debug_components.sh  validate_openapi_routes.sh
TEST/testCertAuth/: README.txt  ca.key  ca.pem  ca.srl  caChain.pem  engineAdmin.key  engineAdmin.p12  engineAdmin.pem  engineAdmin.req  engineOrg.key  engineOrg.pem  engineOrg.req  engineOrg.srl  gen_test_certs.sh  openssl.cnf  server.key  server.pem  server.req  server.srl
TEST/testDB_opt_cdse/: 000768927C5EBF09F74A40C79B34451A  00C1915C80CBBCC306CF61E82ADA56AA  00D07B8F64A892E94A634057C28EA9B7  0138850018659A587EFDA2834405D9C1  018616B2734EC13B0D9C076FAD482166  01C08B4A25B2FE52140BC70991F957FE  01F293054F0714168A63F727A26D877F  03327B69434C834ECB9A7D8466613A8F  035BF7234D8C0ECB242F95E1B36AE72A  04D4A37B15AC1D1753A60197E9749872  05F05332FDAD34917D77387D3748F7A1  06593C100BA301FCFCC560AEE1F74A39  07C0E2DE4B23BD559C3B55D3301EC621  08359DB0D59F5F2996D767B4B4A2307C  08BF37A365F55DB9F1993A29AF77C271  09BA51B198AFF086CE9724391B955F41  0D1B65F59081A4D776AFD46525ADD72C  0DE5128A39FEE83E8F6DE3F4EA49EDC2  0E525F027FF68DC1DA2E96E02E902175  108BD6C154BFF7F8662F7B170870DB1A  10E329238DC78BBE6A32E0DF5077CB4A  113C930E1B6EE1F077D3B4F1140EC1D5  11BA16A0D2CBFB49243230FE4865B01A  133E9B1D2A50D8CE113495646D4C9329  139674F7F99FF5AE5A1371E93D4F9453  14DC6510AC9462FEA6C721CC362E649D  15E0D6ED7684DBA6AA05B4311445CA0A  16AA9768B448DBE01215B9D5CBE7F485  16BE768C271BAF2030553E5846C453F9  19495D49B6195B9F7B1749847D4D5E6C  1997A47D0EEC9C99975337A504A01C14  19AD4DCAF525A351D2B4CD35B4CF097D  1A4B3901D436221AACB06992875674DF  1BA90572F9AD224CFA68B0A274715D8C  1BC634FDF619B5A27FE93FD53E287E2B  1CC8B324F7D6BEDE816576019E228E67  1D343FA0B1CEEB04067CEF08AA5B70DD  1D9AC589556AABD0DD27D4215ADB3A34  1EF79F6DDE76763A2A918EBB02AAB499  214A55D18FD271CC73F91802F503010A  (+217 more)
TEST/testDB_opt_cdse/secureTmp/: EngineOrg.key.txt
TEST/testDB_opt_cdse/testfiles/: payroll.csv  randomdata-620_A.csv  randomdata-620_B.csv  test.pl
TEST/testfiles/: CSVtest.csv  CSVtest2.csv  CSVtest3.csv  live-api-small.csv  openssl_aes_manual_decryption.txt  randomdata-620_A.csv  randomdata-620_B.csv  test.pl  test.py  test_oversize.pl  test_oversize.py  test_timeout.pl  test_timeout.py
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
samples/ai-agent/: README.md  guarded_agent_workflow.py
samples/hsm-db-crypto/: README  cdse_test_manager.py  env.sh
samples/hsm-db-crypto/a-web/: README  index.html  proxy.py
samples/hsm-db-crypto/b-python/: README  cdse_client.py
samples/hsm-db-crypto/c-golang/: README  cdse_client.go  go.mod
samples/hsm-db-crypto/d-perl/: README  cdse_client.pl
samples/mcp-server/: README.md  caumedse_mcp_server.py
sqlite/: Makefile  Makefile.in  config.status  configure  libtool  sqlite3.h.gch
sqlite-3.7.10/: sqlite3.h.gch
sqlite/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
sqlite/tea/: configure.in
